[package]
name = "revolt-pushd"
version = "0.8.9"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
revolt-result = { version = "0.8.9", path = "../../core/result" }
revolt-config = { version = "0.8.9", path = "../../core/config", features = [
    "report-macros",
    "anyhow"
] }
revolt-database = { version = "0.8.9", path = "../../core/database" }
revolt-models = { version = "0.8.9", path = "../../core/models", features = [
    "validator",
] }
revolt-presence = { version = "0.8.9", path = "../../core/presence", features = [
    "redis-is-patched",
] }

anyhow = { version = "1.0.98" }

amqprs = { version = "1.7.0" }
fcm_v1 = "0.3.0"
web-push = "0.10.0"
isahc = { optional = true, version = "1.7", features = ["json"] }
revolt_a2 = { version = "0.10", default-features = false, features = ["ring"] }
tokio = "1.39.2"
async-trait = "0.1.81"
ulid = "1.0.0"

authifier = "1.0.15"

log = "0.4.11"
pretty_env_logger = "0.4.0"

#serialization
serde_json = "1"
revolt_optional_struct = "0.2.0"
serde = { version = "1", features = ["derive"] }
iso8601-timestamp = { version = "0.2.10", features = ["serde", "bson"] }
base64 = "0.22.1"
