[package]
name = "revolt-january"
version = "0.7.14"
edition = "2021"

[dependencies]
# Utility
mime = "0.3.17"
lazy_static = "1.5.0"
moka = { version = "0.12.8", features = ["future"] }

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web requests
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Core crates
revolt-config = { version = "0.7.16", path = "../../core/config" }
revolt-models = { version = "0.7.16", path = "../../core/models" }
revolt-result = { version = "0.7.16", path = "../../core/result", features = [
    "utoipa",
    "axum",
] }

# Axum / web server
axum = { version = "0.7.5" }
axum-extra = { version = "0.9", features = ["typed-header"] }

# OpenAPI & documentation generation
utoipa-scalar = { version = "0.1.0", features = ["axum"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "ulid"] }
